# qx

./: .gitignore  AGENTS.md  LICENSE  README.md  TASK.md  UI_SPEC.md  components.json  fix.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release-desktop.yml  release-macos.yml  windows-ci.yml
.qoder/: settings.local.json
canvas/: cowart-selection.json  cowart-view-state.json
docs/: README.md  ai-agent-runtime.md  architecture-principles.md  frontend-architecture.md  ipc-catalogue.md  macos-onboarding.md  module-port-inventory.md  module-surfaces.md  plugin-architecture.md  plugin-design-research.md  plugin-storage.md  qx-island-architecture.md  release-and-versioning.md  runtime-threading.md  rust-backend.md  settings-panel.md  shell-and-shortcuts.md  shortcut-registry.md  technical-architecture.md
landing/: index.html  wrangler.toml
public/doc/: README.md  plugin-cli-gui.md  plugin-cli-protocol.md  plugin-development-guide.md  plugin-marketplace.md  plugin-system.md  plugin-tray.md  plugin-ui-guidelines.md  raycast-plugin-conversion.md  release-workflow.md
script/: build_and_run.sh
scripts/: check-all.mjs  check-architecture.mjs  check-docs.mjs  check-i18n.mjs  check-module-ports.mjs  check-qx-island.mjs  check-qx-shell-navigation.mjs  convert-raycast-extension.mjs  esbuild-port.mjs  prepare-search-tools.mjs
scripts/raycast-converter/: generic.mjs  shims.mjs
src/: App.css  App.tsx  Launcher.tsx  ResultsList.tsx  ScreenshotPanel.tsx  SearchBar.tsx  ThemeProvider.tsx  i18n.ts  main.tsx  store.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  app_quit.rs  apps.rs  apps_zh_dict.rs  clipboard.rs  desktop_windows.rs  diagnostics.rs  display.rs  display_monitor.rs  display_windows.rs  external_displays.rs  file_search.rs  floating_panel.rs  g4f.rs  github_calendar.rs  history.rs  http_client.rs  island_window.rs  lib.rs  macro_recorder.rs  main.rs  main_thread.rs  ocr.rs  paths.rs  permissions.rs  plugin_api.rs  plugin_cli.rs  plugin_system.rs  screencap.rs  screenshot.rs  storage.rs  system_information.rs  system_stats.rs  terminal.rs  text_toolbox.rs  tray_menu.rs  updater.rs  v2ex.rs  weather.rs  windows_process.rs
src-tauri/src/clipboard/: capture.rs  editing.rs  file_list.rs  history.rs  media.rs  native.rs  tests.rs
src-tauri/src/file_search/: platform_macos.rs  platform_windows.rs
src-tauri/src/marketplace/: mod.rs
src-tauri/src/media/: gif.rs  h264.rs  image.rs  mod.rs
src-tauri/src/rss/: fetcher.rs  icon_cache.rs  mod.rs  storage.rs  types.rs
src-tauri/src/runtime/: main_thread.rs  mod.rs
src-tauri/src/screencap/: commands.rs  controls.rs  geometry.rs  mod.rs  picker_window.rs  recording_engine.rs  recording_session.rs  screenshot.rs  selection.rs  state.rs  storage.rs  types.rs
src-tauri/src/settings/: entry_config.rs  mod.rs  shortcuts.rs  tests.rs
src-tauri/src/system_information/: power.rs
src-tauri/src/updater/: support.rs  tests.rs  windows.rs
src-tauri/windows/: hooks.nsh
src/components/: BetaBadge.tsx  HomeDateIsland.tsx  HomeSystemIsland.tsx  LoadingMarkLab.tsx  Matrix.tsx  PluginBackgroundBadge.tsx  PluginBackgroundPanel.tsx  QxActionPanel.tsx  QxBottomIsland.tsx  QxListLoading.tsx  QxLoadingMark.tsx  QxModuleSearch.tsx  QxShell.tsx  SearchAliasTagEditor.tsx  ShellActionButton.tsx  (+5 more)
(+238 files in other folders)
