[package]
name = "qx"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.21"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
xcap = "0.4"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
blake3 = "1"
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
quick-xml = "0.36"
scrap = "0.5"
gifski = "1.34"
zip = "2"
rdev = "0.5"
enigo = { version = "0.2", features = ["wayland"] }
ed25519-dalek = { version = "2", features = ["alloc"] }
hex = "0.4"
sysinfo = "0.30"
dirs = "5"
