[package]
name = "qx"
version = "0.4.40"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
arboard = "3.6.1"
battery = "0.7.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
blake3 = "1"
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "socks"] }
tokio = { version = "1", features = ["rt", "macros"] }
quick-xml = "0.36"
scrap = "0.5"
gifski = "1.34"
zip = "2"
rdev = "0.5"
enigo = { version = "0.2", features = ["wayland"] }
ed25519-dalek = { version = "2", features = ["alloc"] }
hex = "0.4"
libc = "0.2"
dirs = "5"
urlencoding = "2"
pinyin = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSImageRep", "NSWorkspace", "NSWindow", "NSPanel", "NSResponder", "NSView"] }
window-vibrancy = "0.6"
core-graphics = "0.21"
search-cache = { path = "vendor/cardinal/search-cache" }
search-cancel = { path = "vendor/cardinal/search-cancel" }
fswalk = { path = "vendor/cardinal/fswalk" }
